<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TitleScreenActivity" >

    <TextView android:id="@+id/main_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/main_screen_title"
        android:textSize="30sp" />
    
    <Button android:id="@+id/new_game_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_screen_title"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/new_game" />
    
    <Button android:id="@+id/existing_game_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_game_button"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/existing_game" />
    
    <Button android:id="@+id/options_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/existing_game_button"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/options" />
    
    <Button android:id="@+id/logout_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/options_button"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/logout" />

</RelativeLayout>
