<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity" >

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:text="@string/sound" />
    
    <CheckBox android:id="@+id/sound_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp" />
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:text="@string/vibration" />
    
    <CheckBox android:id="@+id/vibration_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="70dp" />
    
    <Button android:id="@+id/cancel_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/cancel" />
    
    <Button android:id="@+id/ok_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/cancel_button"
        android:layout_alignBaseline="@id/cancel_button"
        android:layout_marginLeft="10dp"
        android:text="@string/OK" />
    
    <Button android:id="@+id/edit_profile_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/cancel_button"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="10dp"
        android:text="@string/edit_profile" />
    
    <Button android:id="@+id/reset_profile_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/edit_profile_button"
        android:layout_alignBaseline="@id/edit_profile_button"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="10dp"
        android:text="@string/reset_profile" />

</RelativeLayout>
