<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateGroupActivity" >

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
    	<EditText android:id="@+id/search_text"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:hint="@string/username" />
        
        <Button android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    	
	</LinearLayout>
        
    <ListView android:id="@+id/search_list"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_below="@id/search_layout"
     	android:layout_marginTop="5dp"
        android:background="@color/invited_list_background" >
                
    </ListView>
    
    <TextView android:id="@+id/friends_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_list"
        android:layout_marginTop="15dp"
        android:text="@string/friends" />
    
    <ListView android:id="@+id/friends_list"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_below="@id/friends_text"
        android:layout_marginTop="5dp"
        android:background="@color/invited_list_background" >
        
    </ListView>
    
    <TextView android:id="@+id/invited_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/friends_list"
        android:layout_marginTop="15dp"
        android:text="@string/invited" />
    
    <ListView android:id="@+id/invited_list"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_below="@id/invited_text"
        android:layout_marginTop="5dp"
        android:background="@color/invited_list_background" >
        
    </ListView>
    
    <View android:id="@+id/anchor"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true" />
    
    <Button android:id="@+id/ok_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/anchor"
        android:layout_marginBottom="20dp"
        android:text="@string/OK" />
    
    <Button android:id="@+id/cancel_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/anchor"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel" />
    
	
</RelativeLayout>
