<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewGameActivity" >
	
    <LinearLayout android:id="@+id/players_view"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
    	<TextView android:id="@+id/number_of_players_text"
       		android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:layout_weight="1"
       	 	android:text="@string/number_of_players" />
    
    	<Spinner android:id="@+id/players_spinner"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left"
        	android:layout_weight="1" />
    
    </LinearLayout>
    
    <Button android:id="@+id/create_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/players_view"
        android:layout_marginTop="10dp"
        android:text="@string/create_group" />
    
    <ListView android:id="@+id/invited_list"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_below="@id/create_group_button"
        android:background="@color/invited_list_background" >
        
    </ListView>

    <LinearLayout android:id="@+id/game_mode_view"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/invited_list"
        android:layout_marginTop="10dp" >
        
    	<TextView android:id="@+id/game_mode_text"
       		android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:layout_weight="1"
       	 	android:text="@string/game_mode" />
    
    	<Spinner android:id="@+id/game_mode_spinner"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left"
        	android:layout_weight="1" />
    
    </LinearLayout>
    
    <LinearLayout android:id="@+id/difficulty_view"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_mode_view"
        android:layout_marginTop="10dp" >
        
    	<TextView android:id="@+id/difficulty_text"
       		android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
       	 	android:layout_weight="1"
       	 	android:text="@string/difficulty" />
    
    	<Spinner android:id="@+id/difficulty_spinner"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left"
        	android:layout_weight="1" />
    
    </LinearLayout>
    
    <LinearLayout android:id="@+id/turns_view"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/difficulty_view"
        android:layout_marginTop="10dp" >
    	
    	<TextView android:id="@+id/turns_text"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center_vertical"
        	android:layout_weight="1"
        	android:text="@string/number_of_turns" />
    
    	<NumberPicker android:id="@+id/turns_picker"
        	android:layout_width="wrap_content"
        	android:layout_height="50dp"
        	android:layout_gravity="left"
        	android:layout_weight="1" />
    	
    </LinearLayout>
    
	<Button android:id="@+id/create_game_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginBottom="20dp"
	    android:text="@string/create_game" />
    
</RelativeLayout>
