<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip" >

        <TextView
            android:id="@+id/puretext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_to_email" />
        
        <TextView
            android:id="@+id/interval"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="20dip" >

            <TextView
                android:id="@+id/forgetpsw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/username_tx"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/layout_center1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_top"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip" >
            
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/send" />
        
        </LinearLayout>
        
	</RelativeLayout>
	
</LinearLayout>