<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip" >

        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="20dip" >

            <TextView
                android:id="@+id/newusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/new_usm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_top"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip" >

            <TextView
                android:id="@+id/newpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/new_psw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_center_two"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_center"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >


			<TextView
                android:id="@+id/conpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/con_psw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
            
		</LinearLayout>

		<LinearLayout
            android:id="@+id/layout_center_three"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_center_two"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >


			<TextView
                android:id="@+id/newemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/new_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
            
        </LinearLayout>
        
        
        <LinearLayout
            android:id="@+id/layout_center1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_center_three"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip" >

            <Button
                android:id="@+id/btn_newuser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/create" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_center1"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip" >

           <TextView
                android:id="@+id/new_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000" />
           
        </LinearLayout>
        
    </RelativeLayout>

</LinearLayout>